Made changes on home page and market info

--- a/fimco/fimcosite/templates/about.html
+++ b/fimco/fimcosite/templates/about.html
@@ -11,7 +11,7 @@
             <div class="row">
                 <!-- LEFT -->
                 <div class="col-md-9">
-                    <img class="float-left" src="/static/img/smart-min.png" alt="" />
+                    <img class="float-left" src="/static/img/POCHI.png" alt="" />
                     <div class="heading-title">
                         <h2>Who Are We?</h2>
                     </div>
@@ -88,7 +88,7 @@
                 </div>
                 <!-- /RIGHT -->
             </div>
-            <header class="text-center mb-10" id="section0">
+            <header class="text-center mb-10" id="values">
                 <h3>OUR VALUES</h3>
             </header>
 
@@ -118,7 +118,7 @@
                 </div>
             </div>
             <div class="row mt-60">
-                <div class="col-sm-6" id="section1">
+                <div class="col-sm-6" id="mission">
                     <div class="heading-title heading-border-bottom heading-color">
                         <h3>Our Mission</h3>
                         <p>we always complete our missions</p>
@@ -139,7 +139,7 @@
     </section>
     <!-- / -->
     <!-- PARALLAX -->
-    <header class="text-center mb-10" id="section3">
+    <header class="text-center mb-10" id="founders">
         <h3>THE FOUNDERS</h3>
     </header>
     <hr class="mb-60" />
@@ -148,12 +148,12 @@
         <div class="container">
             <div class="row">
                 <!-- item -->
-                <div class="col-md-3 col-sm-6">
+                <div class="col-md-3 col-sm-6 offset-md-1">
                     <div class="box-flip box-color box-icon box-icon-center box-icon-round box-icon-large text-center">
                         <div class="front">
                             <div class="box1 box-default">
                                 <div class="box-icon-title">
-                                    <img class="img-fluid" src="demo_files/images/people/460x700/7-min.jpg" alt="" />
+                                    <img class="img-fluid" src="" alt="" />
                                     <h2>Abdulrahman Said</h2>
                                     <small>Director</small>
                                 </div>
@@ -184,12 +184,12 @@
                 </div>
                 <!-- /item -->
                 <!-- item -->
-                <div class="col-md-3 col-sm-6">
+                <div class="col-md-3 col-sm-6 offset-md-1">
                     <div class="box-flip box-color box-icon box-icon-center box-icon-round box-icon-large text-center">
                         <div class="front">
                             <div class="box1 box-default">
                                 <div class="box-icon-title">
-                                    <img class="img-fluid" src="demo_files/images/people/460x700/12-min.jpg" alt="" />
+                                    <img class="img-fluid" src="" alt="" />
                                     <h2>Ivan Tarimo</h2>
                                     <small>Director</small>
                                 </div>
@@ -220,20 +220,20 @@
                 </div>
                 <!-- /item -->
                 <!-- item -->
-                <div class="col-md-3 col-sm-6">
+                <div class="col-md-3 col-sm-6 offset-md-1">
                     <div class="box-flip box-color box-icon box-icon-center box-icon-round box-icon-large text-center">
                         <div class="front">
                             <div class="box1 box-default">
                                 <div class="box-icon-title">
-                                    <img class="img-fluid" src="demo_files/images/people/460x700/10-min.jpg" alt="" />
-                                    <h2>Sameer Hirji</h2>
+                                    <img class="img-fluid" src="" alt="" />
+                                    <h2>Lawrence Mafuru</h2>
                                     <small>Director</small>
                                 </div>
                             </div>
                         </div>
                         <div class="back">
                             <div class="box2 box-default">
-                                <h4 class="m-0">Sameer Hirji</h4>
+                                <h4 class="m-0">Lawrence Mafuru</h4>
                                 <small>Director</small>
                                 <hr />
                                 <p>Nullam id dolor id nibh ultricies vehicula ut id elit. Integer posuere erat a ante venenatis dapibus posuere</p>
@@ -256,46 +256,46 @@
                 </div>
                 <!-- /item -->
                 <!-- item -->
-                <div class="col-md-3 col-sm-6">
-                    <div class="box-flip box-color box-icon box-icon-center box-icon-round box-icon-large text-center">
-                        <div class="front">
-                            <div class="box1 box-default">
-                                <div class="box-icon-title">
-                                    <img class="img-fluid" src="demo_files/images/people/460x700/8-min.jpg" alt="" />
-                                    <h2>Rosario Arun</h2>
-                                    <small>Director</small>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="back">
-                            <div class="box2 box-default">
-                                <h4 class="m-0">Rosario Arun</h4>
-                                <small>Director</small>
-                                <hr />
-                                <p>Nullam id dolor id nibh ultricies vehicula ut id elit. Integer posuere erat a ante venenatis dapibus posuere</p>
-                                <hr />
-                                <a href="#" class="social-icon social-icon-sm social-facebook">
-                                    <i class="fa fa-facebook"></i>
-                                    <i class="fa fa-facebook"></i>
-                                </a>
-                                <a href="#" class="social-icon social-icon-sm social-twitter">
-                                    <i class="fa fa-twitter"></i>
-                                    <i class="fa fa-twitter"></i>
-                                </a>
-                                <a href="#" class="social-icon social-icon-sm social-linkedin">
-                                    <i class="fa fa-linkedin"></i>
-                                    <i class="fa fa-linkedin"></i>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+{#                <div class="col-md-3 col-sm-6">#}
+{#                    <div class="box-flip box-color box-icon box-icon-center box-icon-round box-icon-large text-center">#}
+{#                        <div class="front">#}
+{#                            <div class="box1 box-default">#}
+{#                                <div class="box-icon-title">#}
+{#                                    <img class="img-fluid" src="demo_files/images/people/460x700/8-min.jpg" alt="" />#}
+{#                                    <h2>Rosario Arun</h2>#}
+{#                                    <small>Director</small>#}
+{#                                </div>#}
+{#                            </div>#}
+{#                        </div>#}
+{#                        <div class="back">#}
+{#                            <div class="box2 box-default">#}
+{#                                <h4 class="m-0">Rosario Arun</h4>#}
+{#                                <small>Director</small>#}
+{#                                <hr />#}
+{#                                <p>Nullam id dolor id nibh ultricies vehicula ut id elit. Integer posuere erat a ante venenatis dapibus posuere</p>#}
+{#                                <hr />#}
+{#                                <a href="#" class="social-icon social-icon-sm social-facebook">#}
+{#                                    <i class="fa fa-facebook"></i>#}
+{#                                    <i class="fa fa-facebook"></i>#}
+{#                                </a>#}
+{#                                <a href="#" class="social-icon social-icon-sm social-twitter">#}
+{#                                    <i class="fa fa-twitter"></i>#}
+{#                                    <i class="fa fa-twitter"></i>#}
+{#                                </a>#}
+{#                                <a href="#" class="social-icon social-icon-sm social-linkedin">#}
+{#                                    <i class="fa fa-linkedin"></i>#}
+{#                                    <i class="fa fa-linkedin"></i>#}
+{#                                </a>#}
+{#                            </div>#}
+{#                        </div>#}
+{#                    </div>#}
+{#                </div>#}
                 <!-- /item -->
             </div>
         </div>
     </section>
     <!-- /PARALLAX -->
-    <section class="section-sm" id="section4">
+    <section class="section-sm" id="approach">
         <div class="container">
             <header class="text-center mb-10">
                 <h3>OUR INVESTMENT APPROACH</h3>
