--- a/fimco/fimcosite/static/css/main.css
+++ b/fimco/fimcosite/static/css/main.css
@@ -1,3 +1,11 @@
+body {
+  background-color: #f0f0f0;
+  font-family: Raleway, Roboto;
+  -webkit-font-smoothing: antialiased;
+  font-size: 16px;
+  line-height: 1.5;
+}
+
 a.no-text-decoration {
   color: #002A54;
 }
@@ -10,4 +18,18 @@ a.no-text-decoration {
 .btn-primary:hover, .btn-primary:active {
   background-color: #001f3d;
   border-color: #001429;
+}
+
+#footer {
+    font-size: 14px;
+    color: rgba(255,255,255,0.6);
+    display: block;
+    background: #002A54;
+    background: -moz-linear-gradient(top, #003366 0%, #002A54 100%);
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #003366), color-stop(100%, #002A54));
+    background: -webkit-linear-gradient(top, #003366 0%, #002A54 100%);
+    background: -o-linear-gradient(top, #003366 0%, #002A54 100%);
+    background: -ms-linear-gradient(top, #003366 0%, #002A54 100%);
+    background: linear-gradient(to bottom, #003366 0%,#002A54 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#003366', endColorstr='#002A54',GradientType=0 );
 }
