Made changes on home page and market info

--- a/fimco/fimcosite/static/css/main.css
+++ b/fimco/fimcosite/static/css/main.css
@@ -20,6 +20,10 @@ a.no-text-decoration {
   border-color: #001429;
 }
 
+.tp-bgimg.defaultimg {
+    opacity: 0.95 !important;
+}
+
 #footer {
     font-size: 14px;
     color: rgba(255,255,255,0.6);
