--- a/fimco/fimcosite/templates/index.html
+++ b/fimco/fimcosite/templates/index.html
@@ -133,27 +133,27 @@
                 <!-- SLIDE  -->
                 <li data-index="rs-227" data-transition="slidevertical" data-slotamount="1"  data-easein="default" data-easeout="default" data-masterspeed="1500" data-thumb="assets/images/_smarty/rs5/express_bglight-100x50.jpg"  data-rotate="0"  data-fstransition="fade" data-fsmasterspeed="1500" data-fsslotamount="7" data-saveperformance="off"  data-title="Intro" data-description="">
                     <!-- MAIN IMAGE -->
-                    <img src="/static/img/rs5/express_bglight.jpg"  alt=""  data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg" data-no-retina>
+                    <img src="/static/img/rs5/FIMCO1.jpg"  alt=""  data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg" data-no-retina>
                     <!-- LAYERS -->
 
                     <!-- LAYER NR. 1 -->
-                    <div class="tp-caption   tp-resizeme"
-                        id="slide-227-layer-1"
-                        data-x="['right','right','center','center']" data-hoffset="['-254','-453','70','60']"
-                        data-y="['middle','middle','middle','bottom']" data-voffset="['50','50','211','25']"
-                        data-width="none"
-                        data-height="none"
-                        data-whitespace="nowrap"
-                        data-transform_idle="o:1;"
-
-                        data-transform_in="x:right;s:1500;e:Power3.easeOut;"
-                        data-transform_out="opacity:0;s:1500;e:Power4.easeIn;s:1500;e:Power4.easeIn;"
-                        data-start="2500"
-                        data-responsive_offset="on"
-
-
-                        style="z-index: 5;"><img src="/static/img/rs5/macbookpro.png" alt="" width="1000" height="600" data-ww="['1000px','1000px','500px','350px']" data-hh="['600px','600px','300px','210px']" data-no-retina>
-                    </div>
+{#                    <div class="tp-caption   tp-resizeme"#}
+{#                        id="slide-227-layer-1"#}
+{#                        data-x="['right','right','center','center']" data-hoffset="['-254','-453','70','60']"#}
+{#                        data-y="['middle','middle','middle','bottom']" data-voffset="['50','50','211','25']"#}
+{#                        data-width="none"#}
+{#                        data-height="none"#}
+{#                        data-whitespace="nowrap"#}
+{#                        data-transform_idle="o:1;"#}
+{##}
+{#                        data-transform_in="x:right;s:1500;e:Power3.easeOut;"#}
+{#                        data-transform_out="opacity:0;s:1500;e:Power4.easeIn;s:1500;e:Power4.easeIn;"#}
+{#                        data-start="2500"#}
+{#                        data-responsive_offset="on"#}
+{##}
+{##}
+{#                        style="z-index: 5;"><img src="/static/img/rs5/macbookpro.png" alt="" width="1000" height="600" data-ww="['1000px','1000px','500px','350px']" data-hh="['600px','600px','300px','210px']" data-no-retina>#}
+{#                    </div>#}
 
                     <!-- LAYER NR. 2 -->
 {#                    <div class="tp-caption   tp-resizeme"#}
@@ -351,7 +351,7 @@
                 <!-- SLIDE  -->
                 <li data-index="rs-228" data-transition="slidevertical" data-slotamount="1"  data-easein="default" data-easeout="default" data-masterspeed="1500"  data-rotate="0"  data-saveperformance="off"  data-title="Examples" data-description="">
                     <!-- MAIN IMAGE -->
-                    <img src="/static/img/rs5/desktopbg1.jpg"  alt=""  data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg" data-no-retina>
+                    <img src="/static/img/rs5/FIMCO2.jpg"  alt=""  data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg" data-no-retina>
                     <!-- LAYERS -->
 
                     <!-- LAYER NR. 1 -->
@@ -516,7 +516,7 @@
                 <!-- SLIDE  -->
                 <li data-index="rs-229" data-transition="slidevertical" data-slotamount="1"  data-easein="default" data-easeout="default" data-masterspeed="1500"  data-rotate="0"  data-saveperformance="off"  data-title="Easy to Use" data-description="">
                     <!-- MAIN IMAGE -->
-                    <img src="/static/img/rs5/mountainbg.jpg"  alt=""  data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg" data-no-retina>
+                    <img src="/static/img/rs5/FIMCO3.jpg"  alt=""  data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg" data-no-retina>
                     <!-- LAYERS -->
 
                     <!-- LAYER NR. 1 -->
@@ -824,7 +824,7 @@
                         data-startslide="0"
                         data-endslide="3"
 
-                        style="z-index: 11; min-width: 60px; max-width: 60px; white-space: nowrap; font-weight: 100; padding:22px 0 0 14px; border: 1px solid rgba(0, 0, 0, 0.20);border-radius:50% 50% 50% 50%;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;">
+                        style="z-index: 11; min-width: 60px; max-width: 60px; white-space: nowrap; font-weight: 100; padding:22px 0 0 14px; border: 1px solid rgba(255, 255, 255, 0.80);border-radius:50% 50% 50% 50%;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;">
                           <span></span>
                           <span></span>
                           <span></span>
@@ -926,14 +926,14 @@
                                 "pagination": true
                                 "transitionStyle":"fadeUp" (fade,backSlide,goDown,fadeUp)
                         -->
-                        <div class="owl-carousel buttons-autohide controlls-over" data-plugin-options='{"singleItem": true, "autoPlay": 3400, "navigation": true, "pagination": true, "transitionStyle":"fadeUp"}'>
+{#                        <div class="owl-carousel buttons-autohide controlls-over" data-plugin-options='{"singleItem": true, "autoPlay": 3400, "navigation": true, "pagination": true, "transitionStyle":"fadeUp"}'>#}
                             <div>
-                                <img class="img-fluid" src="/static/img/support.jpg" alt="">
+                                <img class="img-fluid" src="/static/img/money.jpg" alt="">
                             </div>
-                            <div>
-                                <img class="img-fluid" src="/static/img/girl_looking-min.jpg" alt="">
-                            </div>
-                        </div>
+{#                            <div>#}
+{#                                <img class="img-fluid" src="/static/img/girl_looking-min.jpg" alt="">#}
+{#                            </div>#}
+{#                        </div>#}
                     </div>
                 </div>
             </div>
@@ -977,43 +977,43 @@
                     <div class="col-md-4 col-sm-4">
                         <h4>Our Skills</h4>
                         <label>
-                            <span class="float-right">60%</span>
-                            MARKETING
+                            <span class="float-right">99%</span>
+                            INVESTMENT
                         </label>
                         <div class="progress progress-xxs">
-                            <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%; min-width: 2em;"></div>
-                        </div>
-
-                        <label>
-                            <span class="float-right">88%</span>
-                            SALES
-                        </label>
-                        <div class="progress progress-xxs">
-                            <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 88%; min-width: 2em;"></div>
-                        </div>
-
-                        <label>
-                            <span class="float-right">93%</span>
-                            DESIGN
-                        </label>
-                        <div class="progress progress-xxs">
-                            <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 93%; min-width: 2em;"></div>
-                        </div>
-
-                        <label>
-                            <span class="float-right">77%</span>
-                            DEVELOPMENT
-                        </label>
-                        <div class="progress progress-xxs">
-                            <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 77%; min-width: 2em;"></div>
+                            <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 99%; min-width: 2em;"></div>
                         </div>
 
                         <label>
                             <span class="float-right">99%</span>
-                            OTHER
+                            FUND MANAGEMENT
                         </label>
                         <div class="progress progress-xxs">
-                            <div class="progress-bar progress-bar-primary" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 99%; min-width: 2em;"></div>
+                            <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 99%; min-width: 2em;"></div>
+                        </div>
+
+                        <label>
+                            <span class="float-right">82%</span>
+                            BROKERAGE
+                        </label>
+                        <div class="progress progress-xxs">
+                            <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 82%; min-width: 2em;"></div>
+                        </div>
+
+                        <label>
+                            <span class="float-right">88%</span>
+                            MARKET INFORMATION
+                        </label>
+                        <div class="progress progress-xxs">
+                            <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 88%; min-width: 2em;"></div>
+                        </div>
+
+                        <label>
+                            <span class="float-right">93%</span>
+                            TRADING
+                        </label>
+                        <div class="progress progress-xxs">
+                            <div class="progress-bar progress-bar-primary" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 93%; min-width: 2em;"></div>
                         </div>
                     </div>
                     <!-- /skills -->
