--- a/fimco/fimcosite/templates/pochi.html
+++ b/fimco/fimcosite/templates/pochi.html
@@ -14,24 +14,46 @@
                     <div class="heading-title">
                         <h2>It's simple transparent & Competitive</h2>
                     </div>
-                    <p>Lorem ipsum dolor sit amet tempus malesuada. Suspendisse in dui. Ut elit metus, quis consectetuer
-                        congue augue quis erat. Quisque pretium eu, aliquam odio. Donec a pellentesque consectetuer,
-                        augue nec odio. Nam accumsan at, porttitor sem at porttitor laoreet viverra mattis.
-                        Aliquam ultricies accumsan. In tempus. Pellentesque felis.
+                    <p> A solution that offers savers the ability to access competitive rates whilst having access to their cash.
+                        POCHI rates will beat the average interest rate provided by bank accounts. Ut elit metus, quis consectetuer
+                        congue augue quis erat. Quisque pretium eu, aliquam odio. Donec a pellentesque consectetuer, augue nec odio.
+                        Nam accumsan at, porttitor sem at porttitor laoreet viverra mattis. Aliquam ultricies accumsan.
                     </p>
-                    <p>Aliquam nisl. Nunc condimentum wisi. Aenean nonummy risus at eros. Suspendisse congue odio at
-                        purus. Quisque eu justo. Quisque eu eros. Sed accumsan dictum, laoreet sit amet ante.
-                        Curabitur ultrices iaculis. In gravida eros in consequat diam. Donec nonummy, tellus in lorem
-                        lorem pretium magna. In hac habitasse platea dictumst. Suspendisse elit eu scelerisque a,
-                        gravida vel, purus. Class aptent taciti sociosqu ad litora torquent per conubia nostra,
-                        per inceptos hymenaeos.
+                    <p> POCHI will keep your principal burning whilst you enjoy the monthly interest into your wallet
+                        (or designated wallet). Suspendisse congue odio at purus. Quisque eu justo. Quisque eu eros.
+                        Sed accumsan dictum, laoreet sit amet ante. Curabitur ultrices iaculis. In gravida eros in consequat diam.
+                        Donec nonummy, tellus in lorem lorem pretium magna. In hac habitasse platea dictumst.
+                        Suspendisse elit eu scelerisque a, gravida vel, purus. Class aptent taciti sociosqu ad litora
+                        torquent per conubia nostra, per inceptos hymenaeos.
                     </p>
                     <blockquote>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas metus nulla, commodo a
-                            sodales sed, dignissim pretium nunc.
-                        </p>
+                        <p>"Spare the seed, devour the fruit"; "Usile mbegu, kula tunda"</p>
                         <cite>Anonymous</cite>
                     </blockquote>
+                    <div class="col-md-3">
+                        <div class="tp-caption WebProduct-Button rev-btn "
+                            id="slide-229-layer-8"
+                            data-x="['left','left','left','left']" data-hoffset="['30','30','200','79']"
+                            data-y="['middle','middle','top','top']" data-voffset="['268','268','456','430']"
+                            data-width="none"
+                            data-height="none"
+                            data-whitespace="nowrap"
+                            data-transform_idle="o:1;"
+                            data-transform_hover="o:1;rX:0;rY:0;rZ:0;z:0;s:300;e:Linear.easeNone;"
+                            data-style_hover="c:rgba(51, 51, 51, 1.00);bg:rgba(0, 42, 84, 1.00);"
+
+                            data-transform_in="x:-50px;opacity:0;s:1000;e:Power2.easeOut;"
+                            data-transform_out="opacity:0;s:1500;e:Power4.easeIn;s:1500;e:Power4.easeIn;"
+                            data-start="1750"
+                            data-splitin="none"
+                            data-splitout="none"
+                            data-actions='[{"event":"click","action":"jumptoslide","slide":"rs-230","delay":""}]'
+                            data-responsive_offset="on"
+                            data-responsive="off"
+
+                            style="z-index: 10; white-space: nowrap;letter-spacing:1px;">GO TO POCHI
+                        </div>
+                    </div>
                 </div>
                 <!-- /LEFT -->
 
